# Rips-Homology-persistence

./: CMakeLists.txt  README.md
OffFiles/: Circlegenerator.cpp
include/Resources/: filereaders.cpp  filereaders.hpp
src/: Circlegenerator.cpp  main.cpp
